--- a/01_notebooks/P7_3_Selection_features_vf.ipynb
+++ b/01_notebooks/P7_3_Selection_features_vf.ipynb
@@ -8,9 +8,9 @@
     "*Philippe LONJON (janvier 2020)*\n",
     "\n",
     "---\n",
-    "Ce projet consiste à développer un modèle de scoring, qui donnera une prédiction sur la probabilité de faillite d'un client qui demande un prêt.\n",
+    "Ce projet consiste à développer un modèle de scoring, qui donnera une prédiction sur la probabilité de défaut de paiement d'un client qui demande un prêt.\n",
     "Il s'agit d'un problème :\n",
-    "* **Supervisé** : Les étiquettes (Défauts de crédit) sont connus\n",
+    "* **Supervisé** : Les étiquettes (Défauts de paiement) sont connus\n",
     "* **Classification** : Les valeurs à prédire sont des variables qualitatives\n",
     "---\n",
     "## Notebook 3 : Sélection de features via un modèle de gradient boosting\n",
@@ -405,7 +405,7 @@
    "metadata": {},
    "source": [
     "# 3. Sélection des features\n",
-    "On trie les variables par ordre d'importance, puis on garde celles qui contrinue à 95% au modèle."
+    "On trie les variables par ordre d'importance, puis on garde celles qui contribuent à 95% au modèle."
    ]
   },
   {
@@ -556,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
