--- a/01_notebooks/P7_5_Selection_model_vf.ipynb
+++ b/01_notebooks/P7_5_Selection_model_vf.ipynb
@@ -8,9 +8,9 @@
     "*Philippe LONJON (janvier 2020)*\n",
     "\n",
     "---\n",
-    "Ce projet consiste à développer un modèle de scoring, qui donnera une prédiction sur la probabilité de faillite d'un client qui demande un prêt.\n",
+    "Ce projet consiste à développer un modèle de scoring, qui donnera une prédiction sur la probabilité de défaut de paiement d'un client qui demande un prêt.\n",
     "Il s'agit d'un problème :\n",
-    "* **Supervisé** : Les étiquettes (Défauts de crédit) sont connus\n",
+    "* **Supervisé** : Les étiquettes (Défauts de paiement) sont connus\n",
     "* **Classification** : Les valeurs à prédire sont des variables qualitatives\n",
     "---\n",
     "## Notebook 5 : Sélection du modèle\n",
@@ -462,8 +462,8 @@
    "metadata": {},
    "source": [
     "# 3. Evaluation du seuil de probabilité pour classer un score en défaut\n",
-    "Maintenant que nous avons le modèle, nous allons déterminer un seuil de classification, c'est à dire, le niveau de probabilité à partir duquel le client sera classé en défaut.<br>\n",
-    "Pour cela nous allons évaluer l'impact de différents seuils de classification sur le portefeuille client, puis prendre celui qui permet une meilleure préservation du portefeuille.\n",
+    "Maintenant que nous avons le modèle, nous allons déterminer un seuil de classification, c'est à dire, le niveau de probabilité à partir duquel le client sera classé en défaut de paiement.<br>\n",
+    "Pour cela nous allons évaluer l'impact de différents seuils de classification sur le portefeuille client, dans le cas d'un défaut de crédit, puis prendre celui qui permet une meilleure préservation du portefeuille.\n",
     "#### Etape 1\n",
     "On récupère par client : les défauts réels, les probabilités du modèle et les montants du crédit demandé"
    ]
@@ -572,7 +572,7 @@
     "On va ensuite :\n",
     "- définir des taux d'acceptation de la demande dégressifs, en partant de 100% (toutes les demandes acceptée) jusqu'à 98%. Ce seuil est suffisamment bas, car il y a peu de clients qui font défaut.\n",
     "- Pour chaque taux d'acceptation, on définit le seuil de classification associé.\n",
-    "- On peut alors établir les demandes qui seront acceptées, puis évaluer le portefeuille (sachant les crédit qui feront réellement défaut) :<br>Crédits qui ne font pas défaut - Crédits qui font défaut"
+    "- On peut alors établir les demandes qui seront acceptées, puis évaluer le portefeuille (e ns ebasant sur les crédit qui feront réellement défaut) :<br>Valeur portefeuille = Crédits qui ne font pas défaut - Crédits qui font défaut"
    ]
   },
   {
