--- a/01_notebooks/P7_1_Cleaning_features_engineering_vf.ipynb
+++ b/01_notebooks/P7_1_Cleaning_features_engineering_vf.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Projet 7 : Implémentez un modèle de scoring\n",
-    "*Philippe LONJON (janvier 2020)*\n",
+    "*Philippe LONJON (février 2020)*\n",
     "\n",
     "---\n",
-    "Ce projet consiste à développer un modèle de scoring, qui donnera une prédiction sur la probabilité de faillite d'un client qui demande un prêt.\n",
+    "Ce projet consiste à développer un modèle de scoring, qui donnera une prédiction sur la probabilité de défaut de paiement d'un client qui demande un prêt.\n",
     "Il s'agit d'un problème :\n",
-    "* **Supervisé** : Les étiquettes (Défauts de crédit) sont connus\n",
+    "* **Supervisé** : Les étiquettes (Défauts de paiement) sont connus\n",
     "* **Classification** : Les valeurs à prédire sont des variables qualitatives\n",
     "---\n",
     "## Notebook 1 : Nettoyage des données et création des variables\n",
@@ -11136,7 +11136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
